tests/invalid/bug17.err_exp
bug17.m:008: In declaration of function `bug17.init_foo'/2:
bug17.m:008:   error: the type `bug17.foo'/0 is not exported, and thus it may
bug17.m:008:   not be used in the interface.
